CpuTimer jamed when ExtInt func utilized

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -12,3 +12,4 @@ encoding//Debug/subdir_rules.mk=UTF-8
 encoding//Debug/subdir_vars.mk=UTF-8
 encoding//Debug/targetConfigs/subdir_rules.mk=UTF-8
 encoding//Debug/targetConfigs/subdir_vars.mk=UTF-8
+encoding//SRC/SM_Ecat.c=UTF-8
