--- a/.cproject
+++ b/.cproject
@@ -41,11 +41,11 @@
 								<option id="com.ti.ccstudio.buildDefinitions.C2000_15.12.compilerID.DIAG_WRAP.1314364743" name="Wrap diagnostic messages (--diag_wrap)" superClass="com.ti.ccstudio.buildDefinitions.C2000_15.12.compilerID.DIAG_WRAP" value="com.ti.ccstudio.buildDefinitions.C2000_15.12.compilerID.DIAG_WRAP.off" valueType="enumerated"/>
 								<option id="com.ti.ccstudio.buildDefinitions.C2000_15.12.compilerID.INCLUDE_PATH.1454241216" name="Add dir to #include search path (--include_path, -I)" superClass="com.ti.ccstudio.buildDefinitions.C2000_15.12.compilerID.INCLUDE_PATH" valueType="includePath">
 									<listOptionValue builtIn="false" value="&quot;${CG_TOOL_ROOT}/include&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;D:\Project\DSP_Project\MC_Submodule_SVPWM\INC&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;D:\Project\DSP_Project\MC_Submodule_SVPWM\SRC&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;D:\Project\DSP_Project\MC_Submodule_SVPWM\TI_LIB_INC&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;D:\Project\DSP_Project\MC_Submodule_SVPWM\TI_LIB_SRC&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;D:\Project\DSP_Project\MC_Submodule_SVPWM\targetConfigs&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${PROJECT_LOC}\INC&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${PROJECT_LOC}\SRC&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${PROJECT_LOC}\TI_LIB_INC&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${PROJECT_LOC}\TI_LIB_SRC&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${PROJECT_LOC}\targetConfigs&quot;"/>
 								</option>
 								<inputType id="com.ti.ccstudio.buildDefinitions.C2000_15.12.compiler.inputType__C_SRCS.372567724" name="C Sources" superClass="com.ti.ccstudio.buildDefinitions.C2000_15.12.compiler.inputType__C_SRCS"/>
 								<inputType id="com.ti.ccstudio.buildDefinitions.C2000_15.12.compiler.inputType__CPP_SRCS.1586432113" name="C++ Sources" superClass="com.ti.ccstudio.buildDefinitions.C2000_15.12.compiler.inputType__CPP_SRCS"/>
